<resources>
    <string name="app_name">Rcipo</string>
    <string name="action_settings">Settings</string>


    <string name="tab_menu_alert">提醒</string>
    <string name="tab_menu_profile">信息</string>
    <string name="tab_menu_pay">我的</string>
    <string name="tab_menu_setting">设置</string>


    <string name="login">登录</string>
    <string name="registr">注册</string>
    <string name="phone">请输入您的电话号码</string>
    <string name="password">请输入您的密码</string>
    <string name="use_third_account">第三方账号登录</string>
    <string name="create_infm_account">创建账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="no_install_wechat">未安装微信</string>
    <string name="no_install_qq">未安装QQ</string>
    <string name="tip_loging">登录中...</string>
    <string name="tip_begin_oauth">开始授权...</string>
    <string name="tip_login_fail">登录失败</string>
    <string name="oauth_fail">授权失败</string>
    <string name="oauth_cancle">授权取消</string>
    <string name="tip_phone_regex_not_right">手机号码格式不正确</string>
    <string name="tip_account_empty">请输入您的手机号或邮箱地址</string>
    <string name="tip_account_regex_not_right">手机号格式不正确</string>
    <string name="tip_password_can_not_be_empty">密码不能为空</string>
    <string name="user_rule">用户协议</string>
    <string name="create_account">创建账号</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="count_down">%ss</string>
    <string name="tip_please_input_phone">请输入手机号码</string>
    <string name="tip_phone_can_not_be_empty">手机号码不能为空</string>
    <string name="tip_please_input_code">请输入验证码</string>
    <string name="tip_please_input_6_32_password">请输入6-32个密码</string>
    <string name="reset_pwd">重置密码</string>


    <string name="tzyd">投资要点</string>
    <string name="zcxx">职场信息</string>
    <string name="czfx">成长分析</string>
    <string name="dwtz">对外投资</string>
    <string name="xwhx">行为画像</string>
    <string name="xlfx">心理分析</string>
    <string name="tjbg">体检报告</string>
    <string name="rzyt">融资用途</string>
    <string name="fhjl">分红纪录</string>
    <string name="jyjl">交易记录</string>


    <string name="lietou_info">技术推广服务；计算机系统服务；会议及展览服务；企业管理咨询；投资咨询； 教育咨询（不含出国留学咨询及中介服务）；企业策划；市场调查；计算机技术培训； 人才供求信息收集、整理、储存、发布和咨询服务；人才推荐；人才招聘。 （人才供求信息的收集、整理、储存、发布和咨询服务；人才推荐； 人才招聘以及依法须经批准的项目，经相关部门批准后依批准的内容开展经营活动。） </string>
    <string name="lietou_djjg">北京市工商行政管理局昌平分局 核准日期 2015年09月08日</string>
    
    <string name="lt_fxxy">上市协议书中写明该上市人的发行信息，包括但不限于融资金额、发行股数、发行价格、股票持有收益、交易收益、保证金、到期日、回购退市补偿、违约责任、赔偿金额等。</string>
</resources>
